<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/f_billing_acountSelect_listAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:textSize="@dimen/Text_Field"
                android:text="@string/SeleccionaCuenta"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_vertical"/>
            <ListView
                android:id="@+id/f_billing_acountSelect_listAccounts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/f_billing_acountSelect_introduceacount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="9dp"
                    android:textSize="@dimen/Text_Field"
                    android:text="@string/introduce_un_correo_electronico"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/f_billing_acountSelect_editText_email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="textEmailAddress"/>
                <Button
                    android:id="@+id/f_billing_acountSelect_button_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"/>

            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>