<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardBackgroundColor="@android:color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/acerca_de_logo_eclipseapps"
                    android:layout_alignParentEnd="true"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logo"/>
                <TextView
                    android:id="@+id/acerca_de_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acerca_de"
                    android:textColor="@color/colorPrimary" />
                <TextView
                    android:id="@+id/acerca_de_texto"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/acerca_de_titulo"
                    android:layout_toLeftOf="@+id/acerca_de_logo_eclipseapps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acerca_de_texto"
                    android:textColor="@color/colorPrimary"
                    android:autoLink="web"
                    android:textColorLink="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/acerca_de_texto_2"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/acerca_de_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acerca_de_texto_2"
                    android:textColor="@color/colorPrimary"
                    android:autoLink="all"
                    android:textColorLink="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/acerca_de_texto_3"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/acerca_de_texto_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acerca_de_texto_3"
                    android:textColor="@color/colorPrimary"
                    android:autoLink="web"
                    android:textColorLink="@color/colorPrimaryDark"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardBackgroundColor="@android:color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:id="@+id/aviso_privacidad">
                <TextView
                    android:id="@+id/aviso_privacidad_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aviso de privacidad."
                    android:textColor="@color/colorPrimary"/>
                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_secure"/>
                <WebView
                    android:layout_below="@+id/aviso_privacidad_title"
                    android:id="@+id/acerca_de_aviso_privacidad"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="2500dp"
                    android:visibility="gone"
                    android:scrollbars="none"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>