<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp">
            <ImageView
                android:id="@+id/menu_left_user_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_account_circle_black_40dp"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/menu_left_user_image"
                android:id="@+id/menu_left_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/menu_left_user_image"
                android:id="@+id/menu_left_user_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User@mail.com"/>
        </RelativeLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_home_black_24dp"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/menu_left_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/resumen"
                android:textSize="18sp" />

        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_list_black_24"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/menu_left_movimientos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/movimientos"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icono_filtro"/>
            <TextView
                android:id="@+id/menu_left_movimientos_filtrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filtrar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@android:drawable/ic_menu_send"/>
            <TextView
                android:id="@+id/menu_left_movimientos_exportar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exportar a Excel"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_account_balance_black_24"/>
            <TextView
                android:id="@+id/menu_left_cuentas"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/cuentas"
                android:textSize="18sp" />

        </LinearLayout>

        <eclipseapps.android.customviews.ListViewMaxHeight
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            custom:maxHeight="130dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_left_cuentas_lista"
            android:divider="@drawable/divider"
            android:dividerHeight="5dp"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_category_black_24"/>
            <TextView
                android:id="@+id/menu_left_categorias"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/categorias"
                android:textSize="18sp" />

        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_account_balance_wallet_black_24"/><!-- Falta icono-->


            <TextView
                android:id="@+id/menu_left_presupuestos"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/presupuesto"
                android:textSize="18sp"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_receipt_black_24"/><!-- Falta icono-->


            <TextView
                android:id="@+id/menu_left_facturas"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/facturas"
                android:textSize="18sp"/>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:id="@+id/menu_left_premium_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp">
                <ProgressBar
                    android:visibility="invisible"
                    android:id="@+id/menu_left_premium_wait"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/menu_left_premium_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sharp_stars_black_24"/>
            </FrameLayout>

            <TextView
                android:id="@+id/menu_left_premium"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Premium version"
                android:textSize="18sp"/>

        </LinearLayout>





        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout

            android:id="@+id/menu_left_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@android:drawable/ic_menu_manage"/>
            <TextView
                android:id="@+id/menu_manage"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/opciones"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/imageview_premiumreward"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>
</RelativeLayout>
